syntax = "proto3";

package search;

service SearchService {
  rpc SearchQuestions (SearchRequest) returns (SearchResponse);
  rpc UploadData (UploadRequest) returns (UploadResponse);
}

message SearchRequest {
  string query = 1;
}

message SearchResponse {
  repeated Question results = 1;
}

message Question {
  string id = 1;
  string type = 2;
  string title = 3;
  string solution = 4;
}

message UploadRequest {
  repeated Question data = 1;
}

message UploadResponse {
  string message = 1;
}
